Edited README + Added Jupyter Notebook example

--- a/llm_bench/benchmark_suite.ipynb
+++ b/llm_bench/benchmark_suite.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt\n",
+    "%pip install python-dotenv seaborn matplotlib pandas numpy locust==2.18.1 orjson==3.9.10\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "import os\n",
